--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-intersection-observer": "^9.13.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "eslint": "^8",
